--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-theme-provider": "^0.1.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
