--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ajax": "0.0.4",
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -15,9 +16,12 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spotify-api": "^3.0.0",
+    "react-spotify-login": "^0.9.1",
     "react-theme-provider": "^0.1.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "spotify-web-api-js": "^1.5.0",
     "styled-components": "^5.1.1",
     "yup": "^0.29.3"
   },
